@@ -1,3 +1,6 @@
+2010-12-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* amar-src/amar.c: Don't fail on trailing NUL bytes.
+
 2010-12-10  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amcheck-device.pl: Fix possible hang if
 	  Amanda::MainLoop::quit is called before Amanda::MainLoop::run.
